--- a/TODO
+++ b/TODO
@@ -1,2 +1,2 @@
 * Voir a faire une classe spécifique pour le SOAP ( voir le WSDL )
-* séparer xmlvisualstudio dans plusieurs fichiers (avec héritage multiple ? )
+* Changer les icones, voir à montre de bon nom
