--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ XINX - 0.6.7
 - Sauvegarde de l'emplacement des docks et des toolbars
 - Modifications des icones
 - Modifications des menus
+- Filtre projet à plat
 
 XINX - 0.6.6
 ============
