Modification du Change Log

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,12 @@ XINX - 0.6.7
 - Modifications des icones
 - Modifications des menus
 - Filtre projet à plat
+- 0000071: [Autres Modules] EVO ne peux lire le fichieer .... (phoenix)
+- 0000072: [Interface graphique] Raccourci pour ouvrir l'affichage "Dossier projet" (phoenix)
+- 0000078: [Editeur] Insertion auto des { } (phoenix)
+- 0000077: [Editeur] Sélection d'un mot avec un numéro (phoenix)
+- 0000076: [Editeur] Erreur d'orthographe (phoenix)
+- 0000074: [Autres Modules] Ouverture d'un projet aprés nouvelle installation (phoenix)
 
 XINX - 0.6.6
 ============
