--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-xinx (0.7.0.0) unstable; urgency=low
+xinx (0.7.2.0) unstable; urgency=low
 
+  [ Ulrich Van Den Hekke ]
   * Initial Release.
 
- -- Ulrich Van Den Hekke <phoenix@debian-sid>  Sun, 02 Mar 2008 20:22:19 +0100
+ -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Sun, 02 Mar 2008 20:22:19 +0100
