--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,18 @@
+XINX - 0.7.2.2
+==============
+- 230 : Crash Flux de présentation
+- 228 : Variable dans un template
+- 229 : Fuite mémoire
+- 227 : Flux de présentation
+- 226 : Sauvegarde lente
+- 225 : Complétion sur le mode
+- 223 : Ajout des balises with-param
+
+XINX - 0.7.2.1
+==============
+- 220 : Faute d'orthographe
+- 221 : Migration projet
+
 XINX - 0.7.2.0
 ==============
 - 204 : Problème de complétion sur la valeur des attributs
