Correction du CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+XINX - 0.7.2.3
+==============
+- 234 : Completion sur les données d'un include
+
 XINX - 0.7.2.2
 ==============
 - 230 : Crash Flux de présentation
