--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,70 @@
+xinx (0.8.1.0) unstable; urgency=low
+
+  [ Ulrich Van Den Hekke ]
+  * Upstream Release :
+  * - 284 : Documentation sur le site de XINX
+  * - 290 : Plantage
+  * - 285 : NSIS
+  * - 249 : Lancer le parseur XSL
+  * - 292 : D-BUS
+  * - 250 : Actions
+  * - 091 : Afficher un Dock avec le dictionnaire de l'application
+  * - 289 : Certain noeud disparaisse
+  * - 288 : Ne peux ouvrir les fichiers HTML
+  * - 272 : Drag & Drop depuis le dossier projet
+  * - 275 : Faute d'orthographe ;) : Paramêtre au lieu de Paramètre
+  * - 245 : Synchronisation de la vue Contenue
+  * - 274 : Message de Qt : QSortFilterProxyModel: inconsistent changes reported by source model
+  * - 286 : Transformation de ')' en ']' à l"enregistrement
+  * - 270 : Coller ne fonctionne pas
+  * - 251 : Completion
+  * - 280 : Complétion des params en doublon sur un template inclus
+  * - 283 : Ctrl+Enter/Shift+Ctrl+Enter
+  * - 271 : Caractère manquant à l'utilisation d'un modèle personnalisé
+  * - 277 : Pouvoir ajouter des catégories personnalisées dans la gestion des modèles
+
+xinx (0.8.0.0) unstable; urgency=low
+
+  [ Ulrich Van Den Hekke ]
+  * Upstream Release :
+  * - 269 : Problème lors de la complétion & de l'insertion des snipets
+  * - 259 : Ecrire un wrapper pour QtScript de QDocumentSearch, ...
+  * - 265 : Problème on inserting template of multiple line
+  * - 237 : Passage de QTextEdit à QCodeEdit
+  * - 075 : Repérage des parenthèses
+  * - 083 : Réduction de code
+  * - 219 : Fermeture de balise automatique
+  * - 224 : Nom long de fichier
+  * - 231 : Script à la sauvegarde
+  * - 233 : Test de XPATH : phoenix
+  * - 240 : Nouveau format de projets specifiques egx
+  * - 260 : pb indentation automatic
+  * - 261 : Copy/Paste
+  * - 262 : Passage à la ligne
+  * - 264 : Problème lors de l'insertion de texte
+  * - 266 : Désintenter supprimer des caractères
+  * - 267 : Changement sur une balise fermante
+  * - 268 : Propriété projet
+
+xinx (0.7.2.2) unstable; urgency=high
+
+  [ Ulrich Van Den Hekke ]
+  * Upstream Release
+  * - 230 : Crash Flux de présentation
+  * - 228 : Variable dans un template
+  * - 229 : Fuite mémoire
+  * - 227 : Flux de présentation
+  * - 226 : Sauvegarde lente
+  * - 225 : Complétion sur le mode
+  * - 223 : Ajout des balises with-param
+
+xinx (0.7.2.1) unstable; urgency=high
+
+  [ Ulrich Van Den Hekke ]
+  * Upstream Release
+  * - 220 : Faute d'orthographe
+  * - 221 : Migration projet
+
 xinx (0.7.2.0) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
