For new release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+XINX - 0.8.1.1
+==============
+- 295 : Ouverture d'un fichier XSL
+
 XINX - 0.8.1.0
 ==============
 - 284 : Documentation sur le site de XINX
