--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xinx (0.8.1.1) unstable; urgency=low
+
+  [ Ulrich Van Den Hekke ]
+  * Upstream Release :
+  * - 295 : Ouverture d'un fichier XSL
+
+ -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Thu, 26 May 2009 19:00:00 +0100
+ 
 xinx (0.8.1.0) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
