--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+XINX - 0.8.1.2
+==============
+- #296 : Crash régulié lors de l'utilisation de XINX
+- #297 : Complétion du XSL
+
 XINX - 0.8.1.1
 ==============
 - 295 : Ouverture d'un fichier XSL
