--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 XINX - 0.8.1.2
 ==============
-- #296 : Crash régulié lors de l'utilisation de XINX
-- #297 : Complétion du XSL
+- 296 : Crash régulié lors de l'utilisation de XINX
+- 297 : Complétion du XSL
 
 XINX - 0.8.1.1
 ==============
