--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+XINX - 0.8.1.3
+==============
+- 300 : Recheche (Ctrl + f)
+- 301 : xinx/ pb lors de l'ouverture d'un .js
+
 XINX - 0.8.1.2
 ==============
 - 296 : Crash régulié lors de l'utilisation de XINX
