--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,20 @@
+xinx (0.8.1.3) unstable; urgency=low
+
+  [ Ulrich Van Den Hekke ]
+  * Upstream Release :
+  * - 300 : Recheche (Ctrl + f)
+  * - 301 : xinx/ pb lors de l'ouverture d'un .js
+
+ -- Ulrich Van Den Hekke <phoenix@maxiding>  Wed, 29 Jul 2009 23:46:15 +0200
+
 xinx (0.8.1.2) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
-  * - 296 : Crash régulié lors de l'utilisation de XINX
+  * Upstream Release :
+  * - 296 : Crash régulie lors de l'utilisation de XINX
   * - 297 : Complétion du XSL
 
- -- Ulrich Van Den Hekke <phoenix@maxiding>  Tue, 02 Jun 2009 22:18:49 +0200
+ -- Ulrich Van Den Hekke <phoenix@maxiding>  Wed, 29 Jul 2009 23:44:55 +0200
 
 xinx (0.8.1.1) unstable; urgency=low
 
