--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,23 @@
+XINX - 0.8.1.4
+==============
+- 320 : Erreur lors de l'execution du XPATH
+- 324 : Indentation automatique
+- 317 : Warning lors de la manipulation de fichier XML
+
+XINX - 0.8.1.3
+==============
+- 300 : Recheche (Ctrl + f)
+- 301 : xinx/ pb lors de l'ouverture d'un .js
+
+XINX - 0.8.1.2
+==============
+- 296 : Crash régulié lors de l'utilisation de XINX
+- 297 : Complétion du XSL
+
+XINX - 0.8.1.1
+==============
+- 295 : Ouverture d'un fichier XSL
+
 XINX - 0.8.1.0
 ==============
 - 284 : Documentation sur le site de XINX
