--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+XINX - 0.9.0.0-rc2
+==================
+
+- 353 : Sauvegarde affichage du log
+- 352 : Ouverture d'un projet/Mauvaise définition du projet
+- 348 : Crach XINX / Pas de projet / Ouverture XSL
+- Mise à jours documentation
+- Quelques corrections mineurs
+
 XINX - 0.9.0.0-rc1
 ==================
 
