--- a/debian/changelog
+++ b/debian/changelog
@@ -1,143 +1,171 @@
+xinx (0.9.0.0) unstable; urgency=low
+
+  * 353 : Sauvegarde affichage du log
+  * 352 : Ouverture d'un projet/Mauvaise définition du projet
+  * 348 : Crach XINX / Pas de projet / Ouverture XSL
+  * 293 : Création d'un snipet par fichier.
+  * 321 : Hide path sur RecursiveSortFilterProxyModel ne fonctionne pas
+  * 345 : Gestion des Codecs
+  * 190 : Snippet/Template : catégorie principale
+  * 316 : Règle de développement à partir de la 140
+  * 334 : Nouvelle gestion de RCS
+  * 337 : Plantage lors de la modification de fichier XML se trouvant dans le dock présentation XML
+  * 338 : Duplicate entries
+  * 344 : Nouvelle gestion des erreurs
+  * 197 : Tri des sections des template/snippet
+  * 198 : Snippet/Template : option de non validation lors de l'ajout
+  * 291 : Rendre XINX plus modulaire
+  * 298 : QSharedPointer
+  * 306 : Welcom page
+  * 314 : Affichage du résultat HTML
+  * 318 : Completion sur les snipets
+  * 326 : Dialog de migration
+  * 340 : Plus de synchro
+  * 241 : Dock/Onglet
+  * 287 : Version 1.5
+  * 311 : Mise à jours de la boite de dialogue de personnalisation
+  * 319 : Synchronisation Editeur/Dock, Editeur/...
+  * 325 : Lenteur à la fermeture de la boite de dialogue propriété du projet
+  * 339 : Nouveau système de vue contenue
+  * 341 : Problème de désinstallation
+  * 346 : searchWord plus générique
+  * 333 : Boite de dialog nouveau projet
+  * 336 : Sauvegarde d'un nouveau fichier
+
+ -- Ulrich Van Den Hekke <phoenix@maxiding>  Sat, 01 May 2010 22:29:56 +0200
+
 xinx (0.8.1.3) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release :
-  * - 300 : Recheche (Ctrl + f)
-  * - 301 : xinx/ pb lors de l'ouverture d'un .js
+  * 300 : Recheche (Ctrl + f)
+  * 301 : xinx/ pb lors de l'ouverture d'un .js
 
  -- Ulrich Van Den Hekke <phoenix@maxiding>  Wed, 29 Jul 2009 23:46:15 +0200
 
 xinx (0.8.1.2) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release :
-  * - 296 : Crash rÃ©gulie lors de l'utilisation de XINX
-  * - 297 : ComplÃ©tion du XSL
+  * 296 : Crash rÃ©gulie lors de l'utilisation de XINX
+  * 297 : ComplÃ©tion du XSL
 
  -- Ulrich Van Den Hekke <phoenix@maxiding>  Wed, 29 Jul 2009 23:44:55 +0200
 
 xinx (0.8.1.1) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release :
-  * - 295 : Ouverture d'un fichier XSL
+  * 295 : Ouverture d'un fichier XSL
 
  -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Thu, 26 May 2009 19:00:00 +0100
  
 xinx (0.8.1.0) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release :
-  * - 284 : Documentation sur le site de XINX
-  * - 290 : Plantage
-  * - 285 : NSIS
-  * - 249 : Lancer le parseur XSL
-  * - 292 : D-BUS
-  * - 250 : Actions
-  * - 091 : Afficher un Dock avec le dictionnaire de l'application
-  * - 289 : Certain noeud disparaisse
-  * - 288 : Ne peux ouvrir les fichiers HTML
-  * - 272 : Drag & Drop depuis le dossier projet
-  * - 275 : Faute d'orthographe ;) : Paramêtre au lieu de Paramètre
-  * - 245 : Synchronisation de la vue Contenue
-  * - 274 : Message de Qt : QSortFilterProxyModel: inconsistent changes reported by source model
-  * - 286 : Transformation de ')' en ']' à l"enregistrement
-  * - 270 : Coller ne fonctionne pas
-  * - 251 : Completion
-  * - 280 : Complétion des params en doublon sur un template inclus
-  * - 283 : Ctrl+Enter/Shift+Ctrl+Enter
-  * - 271 : Caractère manquant à l'utilisation d'un modèle personnalisé
-  * - 277 : Pouvoir ajouter des catégories personnalisées dans la gestion des modèles
+  * 284 : Documentation sur le site de XINX
+  * 290 : Plantage
+  * 285 : NSIS
+  * 249 : Lancer le parseur XSL
+  * 292 : D-BUS
+  * 250 : Actions
+  * 091 : Afficher un Dock avec le dictionnaire de l'application
+  * 289 : Certain noeud disparaisse
+  * 288 : Ne peux ouvrir les fichiers HTML
+  * 272 : Drag & Drop depuis le dossier projet
+  * 275 : Faute d'orthographe ;) : Paramêtre au lieu de Paramètre
+  * 245 : Synchronisation de la vue Contenue
+  * 274 : Message de Qt : QSortFilterProxyModel: inconsistent changes reported by source model
+  * 286 : Transformation de ')' en ']' à l"enregistrement
+  * 270 : Coller ne fonctionne pas
+  * 251 : Completion
+  * 280 : Complétion des params en doublon sur un template inclus
+  * 283 : Ctrl+Enter/Shift+Ctrl+Enter
+  * 271 : Caractère manquant à l'utilisation d'un modèle personnalisé
+  * 277 : Pouvoir ajouter des catégories personnalisées dans la gestion des modèles
 
  -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Thu, 26 May 2009 08:30:00 +0100
 
 xinx (0.8.0.0) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release :
-  * - 269 : Problème lors de la complétion & de l'insertion des snipets
-  * - 259 : Ecrire un wrapper pour QtScript de QDocumentSearch, ...
-  * - 265 : Problème on inserting template of multiple line
-  * - 237 : Passage de QTextEdit à QCodeEdit
-  * - 075 : Repérage des parenthèses
-  * - 083 : Réduction de code
-  * - 219 : Fermeture de balise automatique
-  * - 224 : Nom long de fichier
-  * - 231 : Script à la sauvegarde
-  * - 233 : Test de XPATH : phoenix
-  * - 240 : Nouveau format de projets specifiques egx
-  * - 260 : pb indentation automatic
-  * - 261 : Copy/Paste
-  * - 262 : Passage à la ligne
-  * - 264 : Problème lors de l'insertion de texte
-  * - 266 : Désintenter supprimer des caractères
-  * - 267 : Changement sur une balise fermante
-  * - 268 : Propriété projet
+  * 269 : Problème lors de la complétion & de l'insertion des snipets
+  * 259 : Ecrire un wrapper pour QtScript de QDocumentSearch, ...
+  * 265 : Problème on inserting template of multiple line
+  * 237 : Passage de QTextEdit à QCodeEdit
+  * 075 : Repérage des parenthèses
+  * 083 : Réduction de code
+  * 219 : Fermeture de balise automatique
+  * 224 : Nom long de fichier
+  * 231 : Script à la sauvegarde
+  * 233 : Test de XPATH : phoenix
+  * 240 : Nouveau format de projets specifiques egx
+  * 260 : pb indentation automatic
+  * 261 : Copy/Paste
+  * 262 : Passage à la ligne
+  * 264 : Problème lors de l'insertion de texte
+  * 266 : Désintenter supprimer des caractères
+  * 267 : Changement sur une balise fermante
+  * 268 : Propriété projet
 
  -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Sun, 02 Mar 2008 20:22:19 +0100
 
 xinx (0.7.2.2) unstable; urgency=high
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release
-  * - 230 : Crash Flux de présentation
-  * - 228 : Variable dans un template
-  * - 229 : Fuite mémoire
-  * - 227 : Flux de présentation
-  * - 226 : Sauvegarde lente
-  * - 225 : Complétion sur le mode
-  * - 223 : Ajout des balises with-param
+  * 230 : Crash Flux de présentation
+  * 228 : Variable dans un template
+  * 229 : Fuite mémoire
+  * 227 : Flux de présentation
+  * 226 : Sauvegarde lente
+  * 225 : Complétion sur le mode
+  * 223 : Ajout des balises with-param
 
  -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Sun, 02 Mar 2008 20:22:19 +0100
 
 xinx (0.7.2.1) unstable; urgency=high
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release
-  * - 220 : Faute d'orthographe
-  * - 221 : Migration projet
+  * 220 : Faute d'orthographe
+  * 221 : Migration projet
 
  -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Sun, 02 Mar 2008 20:22:19 +0100
 
 xinx (0.7.2.0) unstable; urgency=low
 
   [ Ulrich Van Den Hekke ]
-  * Upstream Release :
-  * - 204 : Problème de complétion sur la valeur des attributs
-  * - 186 : Indentation
-  * - 213 : Migration vers la nouvelle version
-  * - 217 : Plantage lors du redémarrage du serveur d'application
-  * - 070 : Améliorations sur complétion des attributs
-  * - 090 : Dans quel charset est la feuille
-  * - 106 : Rechercher sur des fichiers
-  * - 119 : Complétion XML - Complétion des attributs
-  * - 150 : Navigation dans les attributs d'une balise
-  * - 173 : Attribut Name optionel sur le XPath Généré
-  * - 178 : Ouverture de fichiers
-  * - 182 : Plugins SubVersion
-  * - 184 : Pretty Print
-  * - 187 : Fermeture d'onglet
-  * - 188 : Préfixe dans l'assistant de création de projet
-  * - 189 : Comparaison avec le gestionnaire de version
-  * - 191 : Snippet/template : variables globales
-  * - 192 : Langues
-  * - 193 : Faute d'orthographe
-  * - 194 : Application de scripts
-  * - 195 : Pouvoir rafraichir les snippets en live
-  * - 196 : Réouverture du dernier projet utilisé
-  * - 200 : WebServices forever
-  * - 201 : Appel D-Bus
-  * - 205 : Duplication de ligne
-  * - 206 : Ajout automatique des attribut d'un tag
-  * - 207 : Fichier xinx_trace.log sans lecteur C:\
-  * - 209 : Fichier de configuration
-  * - 210 : Plugins & Script
-  * - 211 : Plugins Style et Plugins Linux
-  * - 212 : Recherche projet
-  * - 215 : Ouverture d'un resultat de recherche
-  * - 216 : Recherche dans les fichiers du projets
-  * - 218 : Réindentation
-  * - 208 : paramétrer le temps d'attente pour le recherche de feuille XSL
-  * - 214 : Copie du nom de fichier complet
+  * 204 : Problème de complétion sur la valeur des attributs
+  * 186 : Indentation
+  * 213 : Migration vers la nouvelle version
+  * 217 : Plantage lors du redémarrage du serveur d'application
+  * 070 : Améliorations sur complétion des attributs
+  * 090 : Dans quel charset est la feuille
+  * 106 : Rechercher sur des fichiers
+  * 119 : Complétion XML - Complétion des attributs
+  * 150 : Navigation dans les attributs d'une balise
+  * 173 : Attribut Name optionel sur le XPath Généré
+  * 178 : Ouverture de fichiers
+  * 182 : Plugins SubVersion
+  * 184 : Pretty Print
+  * 187 : Fermeture d'onglet
+  * 188 : Préfixe dans l'assistant de création de projet
+  * 189 : Comparaison avec le gestionnaire de version
+  * 191 : Snippet/template : variables globales
+  * 192 : Langues
+  * 193 : Faute d'orthographe
+  * 194 : Application de scripts
+  * 195 : Pouvoir rafraichir les snippets en live
+  * 196 : Réouverture du dernier projet utilisé
+  * 200 : WebServices forever
+  * 201 : Appel D-Bus
+  * 205 : Duplication de ligne
+  * 206 : Ajout automatique des attribut d'un tag
+  * 207 : Fichier xinx_trace.log sans lecteur C:\
+  * 209 : Fichier de configuration
+  * 210 : Plugins & Script
+  * 211 : Plugins Style et Plugins Linux
+  * 212 : Recherche projet
+  * 215 : Ouverture d'un resultat de recherche
+  * 216 : Recherche dans les fichiers du projets
+  * 218 : Réindentation
+  * 208 : paramétrer le temps d'attente pour le recherche de feuille XSL
+  * 214 : Copie du nom de fichier complet
  
  -- Ulrich Van Den Hekke <ulrich.vdh@shadoware.org>  Sun, 02 Mar 2008 20:22:19 +0100
