--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xinx (0.9.0.1) unstable; urgency=high
+
+  * 347 : Gestion des codecs
+  * 355 : Problème encoding quand on est en UTF-8
+
+ -- Ulrich Van Den Hekke <phoenix@maxiding>  Thu, 25 May 2010 22:57:00 +0200
+
 xinx (0.9.0.0) unstable; urgency=low
 
   * 353 : Sauvegarde affichage du log
