Change the CHANGELOG file

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xinx (0.9.0.7) unstable; urgency=low
+
+  * 363 : Lenteur lors du déplacement danx XINX
+
+ -- Ulrich Van Den Hekke <xinx@shadoware.org>  Fri, 23 Jul 2010 12:00:00 +0200
+
 xinx (0.9.0.6) unstable; urgency=low
 
   * 356 : Bug dans le rafraichissement des snipets
