--- a/debian/changelog
+++ b/debian/changelog
@@ -1,23 +1,14 @@
-xinx (0.9.0.7) unstable; urgency=low
+xinx (0.9.1.0) unstable; urgency=low
 
+  * Add the possibility to wrap line
   * 363 : Lenteur lors du déplacement danx XINX
-
- -- Ulrich Van Den Hekke <xinx@shadoware.org>  Fri, 23 Jul 2010 12:00:00 +0200
-
-xinx (0.9.0.6) unstable; urgency=low
-
   * 356 : Bug dans le rafraichissement des snipets
   * Add a new snipet XSL Base 155
   * Change some library API to manage multiple extention for a file type
-
- -- Ulrich Van Den Hekke <xinx@shadoware.org>  Wed, 09 Jun 2010 22:18:54 +0200
-
-xinx (0.9.0.1) unstable; urgency=high
-
   * 347 : Gestion des codecs
   * 355 : Problème encoding quand on est en UTF-8
 
- -- Ulrich Van Den Hekke <xinx@shadoware.org>  Thu, 25 May 2010 22:57:00 +0200
+ -- Ulrich Van Den Hekke <xinx@shadoware.org>  Fri, 30 Jul 2010 12:00:00 +0200
 
 xinx (0.9.0.0) unstable; urgency=low
 
