--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xinx (0.9.0.10) unstable; urgency=medium
+
+  * 375 : Amélioration gestion journal des erreurs
+  * 376 : Pretty print avec xinx
+  * Some bug fix on the project property page and on the wizard
+  * Some buf fix on the new version wizard
+
+ -- Ulrich Van Den hekke <xinx@shadoware.org> Fri, 01 Oct 2010 14:03:24 +0200
+
 xinx (0.9.0.9) unstable; urgency=low
 
   * 366 : Pretty print à la fermeture de XINX
