--- a/doc/manual/manual.latex
+++ b/doc/manual/manual.latex
@@ -30,19 +30,17 @@
 
 \chapter{Introduction}
 
-XINX est un logiciel de développement essentielement tournée vers l'édition de feuille de style XSL utilisé pour générer des fichiers HTML. 
+XINX est un logiciel de développement essentielement tournée vers l'édition de feuille de style XSL, utilisé pour générer des fichiers HTML. 
 Une feuille de style XSL est un fichier qui décrit une liste de transformation à appliquer à un fichier XML pour le transformer en un autre fichier text (Text plat, HTML, ou un autre fichier XML).
 \\
 
-Le logiciel a été écris au début pour le développement des feuilles de styles de la société Generix Group et été fortement tournée vers cette technologie. Maintenant XINX se concentre sur le développement de feuille de style,
-et tout spécificité lié à la société Generix Group a été déporté dans un plugins.
+Le logiciel a été écris au début pour le développement des feuilles de styles de la société \href{http://www.generixgroup.com/}{Generix Group} et été fortement tournée vers cette technologie. Maintenant XINX se concentre sur le développement de feuille de style, et tout spécificité lié à la société Generix Group a été déporté dans un plugins.
 \\
 
-Le logiciel XINX peut voir ses fonctionnalité étendue à l'aide de modèle (parfois aussi appelé snipet, template), à l'aide de script (au format ECMAScript, proche de qu'est la JavaScript), ou à l'aide de plugins (écrit en C++
-et en utilisant le framework Qt).
+Le logiciel XINX peut voir ses fonctionnalité étendue à l'aide de modèle (parfois aussi appelé snipet ou template), à l'aide de script (au format ECMAScript, proche de qu'est la JavaScript), ou à l'aide de plugins (écrit en C++ et en utilisant le framework Qt).
 \\
 
-XINX utilise le framework Qt comme base.
+XINX utilise le framework \href{http://qt.nokia.com}{Qt} comme base. Ce même framework est utilisé pour développé l'environnement de bureau \href{htpp://ww.kde.org}{KDE}, mais aussi des logiciels connues comme Skype, \ldots. Qt est n'est pas seulement un framework graphique mais propose quelques extentions au langauge C++ à l'aide des signaux, des slots, des pointeurs partagées, des listes, des boucles foreach, \ldots.
 \\
 
 Ce manuel à pour but de vous aider à utiliser le logiciel XINX au mieux. 
@@ -53,6 +51,7 @@ Ce manuel à pour but de vous aider à utiliser le logiciel XINX au mieux.
 \section{Télécharger XINX}
 
 Vous pouvez récupérer XINX à partir des sources sur la page de téléchargement ou aussi à l'aide de  \href{http://subversion.tigris.org/}{SubVersion}. SubVersion est un gestionnaire de version, sous Windows il est livré avec TortoiseSVN par exemple.
+\\
 
 Pour récupérer les sources de la version de développement de XINX, il est possible d'utiliser la ligne de commande suivante :
 
@@ -60,11 +59,16 @@ Pour récupérer les sources de la version de développement de XINX, il est pos
 svn co http://svn.shadoware.org/xinx/trunk
 \end{verbatim}
 
-Les versions stables sont dans le dossiers tags et branches. La sortie de chaque nouvelle version engendre la création d'une branche (v suivis du numéro de version). Les corrections de bugs propre à la version sont effectué dans cette branche. La sortie d'une nouvelle release (mise à jours de la version), engendre la création d'un tag (r suivis du numéro de release). Si on considère qu'une version est écrite ainsi : v0.7.0 (avec 3 nombres qui se suivent), et une release est écrite ainsi : r0.7.0.1 (le quatrième indiquant le numéro de la correction). 
+Les versions stables sont dans le dossiers tags et branches. La sortie de chaque nouvelle version engendre la création d'une branche (v suivis du numéro de version). Les corrections de bugs propre à la version sont effectué dans cette branche. La sortie d'une nouvelle release (mise à jours de la version), engendre la création d'un tag (r suivis du numéro de release). On considère qu'une version est écrite ainsi : v0.10 (avec 3 nombres qui se suivent), et une release est écrite ainsi : r0.10.1 (le troisième indiquant le numéro de la correction).
+\\
 
 \section{Compilation de XINX}
 
 \subsection{Gnu/Linux}
+
+Sous Gnu/Linux la compilation necessite l'installation des paquets suivante :
+* libsvncpp-dev (et ses dépendances)
+* libqt..-dev
 
 \subsection{Ms/Windows}
 
